--- a/Biology.html
+++ b/Biology.html
@@ -8,11 +8,10 @@
 </body>
     
 <body
-      <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
-  <input type="file" name="fileField"><br /><br />
-  <input type="submit" name="submit" value="Submit">
-</form>
-
+    <form action="/foo/bar.ext" method="post" enctype="multipart/form-data">
+        <input type="file" name="filename" />
+        <input type="submit" value="Upload" />
+    </form>
 </body>
 <body>
 <li> <a href= "index.html"> Home</a>  
