--- a/Biology.html
+++ b/Biology.html
@@ -5,8 +5,10 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+    <div id="container">
+
 <body>
-    <h1> Biology</h1>
+    <h2> Biology</h2>
 </body>
     
 <body
@@ -19,4 +21,5 @@
 <li> <a href= "index.html"> Home</a>  
     </li>
 </body>
+</div>
 </html>
