--- a/Biology.html
+++ b/Biology.html
@@ -9,16 +9,19 @@
 
 <body>
     <h2> Biology</h2>
+    <!--creates title for page-->
 </body>
     
 <body
     <form action="/foo/bar.ext" method="post" enctype="multipart/form-data">
         <input type="file" name="filename" />
         <input type="submit" value="Upload" />
+        <!--uploads files to server-->
     </form>
 </body>
 <body>
 <li> <a href= "index.html"> Home</a>  
+<!--creates home button-->
     </li>
 </body>
 </div>
