--- a/Biology.html
+++ b/Biology.html
@@ -13,11 +13,11 @@
 </body>
     
 <body
-    <form action="/foo/bar.ext" method="post" enctype="multipart/form-data">
-        <input type="file" name="filename" />
-        <input type="submit" value="Upload" />
-        <!--uploads files to server-->
-    </form>
+    <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
+  <input type="file" name="fileField"><br /><br />
+  <input type="submit" name="submit" value="Submit">
+  <!--submits files to server-->
+</form>
 </body>
 <body>
 <li> <a href= "index.html"> Home</a>  
